// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert[Base] should render correctly  1`] = `
<div
  class="c1yst5c soui-alert-alert c-i9h152 soui-alert-info"
>
  <span
    class="c-i9h92z soui-alert-icon c-z33bsd soui-alert-info-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8ZM12 19C12.5523 19 13 18.5523 13 18V10C13 9.44772 12.5523 9 12 9C11.4477 9 11 9.44772 11 10V18C11 18.5523 11.4477 19 12 19Z"
      />
    </svg>
  </span>
  <div
    class="c31x8kt soui-alert-content"
  >
    <div
      class="c-i9a6iv soui-alert-text"
    >
      This is a line of important text for alerting purposes
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about closeable 1`] = `
<div>
  <div
    class="c1yst5c soui-alert-alert c-i9h152 soui-alert-info"
  >
    <span
      class="c-i9h92z soui-alert-icon c-z33bsd soui-alert-info-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8ZM12 19C12.5523 19 13 18.5523 13 18V10C13 9.44772 12.5523 9 12 9C11.4477 9 11 9.44772 11 10V18C11 18.5523 11.4477 19 12 19Z"
        />
      </svg>
    </span>
    <div
      class="c31x8kt soui-alert-content"
    >
      <div
        class="c-i9a6iv soui-alert-text"
      >
        This is informative text.
      </div>
    </div>
    <div
      class="c1zwlrg soui-alert-close"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about title 1`] = `
<div
  class="c1yst5c soui-alert-alert c-i9h152 soui-alert-info ce7t2m6 soui-alert-width-title"
>
  <span
    class="c-i9h92z soui-alert-icon c-z33bsd soui-alert-info-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8ZM12 19C12.5523 19 13 18.5523 13 18V10C13 9.44772 12.5523 9 12 9C11.4477 9 11 9.44772 11 10V18C11 18.5523 11.4477 19 12 19Z"
      />
    </svg>
  </span>
  <div
    class="c31x8kt soui-alert-content"
  >
    <div
      class="c297afg soui-alert-title"
    >
      Heading
    </div>
    <div
      class="c-i9a6iv soui-alert-text"
    >
      This is a line of important text for alerting purposes
    </div>
  </div>
  <div
    class="c1zwlrg soui-alert-close"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about type 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px;"
>
  <div
    class="c1yst5c soui-alert-alert c-i9h152 soui-alert-info"
    style="width: calc(50% - 16px);"
  >
    <span
      class="c-i9h92z soui-alert-icon c-z33bsd soui-alert-info-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8ZM12 19C12.5523 19 13 18.5523 13 18V10C13 9.44772 12.5523 9 12 9C11.4477 9 11 9.44772 11 10V18C11 18.5523 11.4477 19 12 19Z"
        />
      </svg>
    </span>
    <div
      class="c31x8kt soui-alert-content"
    >
      <div
        class="c-i9a6iv soui-alert-text"
      >
        This is informative text.
      </div>
    </div>
  </div>
  <div
    class="c1yst5c soui-alert-alert crguref soui-alert-success"
    style="width: calc(50% - 16px);"
  >
    <span
      class="c-i9h92z soui-alert-icon cv9wz80 soui-alert-success-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
        />
      </svg>
    </span>
    <div
      class="c31x8kt soui-alert-content"
    >
      <div
        class="c-i9a6iv soui-alert-text"
      >
        This is success text.
      </div>
    </div>
  </div>
  <div
    class="c1yst5c soui-alert-alert c5wvf0w soui-alert-warning"
    style="width: calc(50% - 16px);"
  >
    <span
      class="c-i9h92z soui-alert-icon c-qqgviv soui-alert-warning-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1ZM12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM12 5C12.5523 5 13 5.44772 13 6V14C13 14.5523 12.5523 15 12 15C11.4477 15 11 14.5523 11 14V6C11 5.44772 11.4477 5 12 5Z"
        />
      </svg>
    </span>
    <div
      class="c31x8kt soui-alert-content"
    >
      <div
        class="c-i9a6iv soui-alert-text"
      >
        This is warning text.
      </div>
    </div>
  </div>
  <div
    class="c1yst5c soui-alert-alert c-8t2b9t soui-alert-danger"
    style="width: calc(50% - 16px);"
  >
    <span
      class="c-i9h92z soui-alert-icon c-en4ho8 soui-alert-danger-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1ZM12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM12 5C12.5523 5 13 5.44772 13 6V14C13 14.5523 12.5523 15 12 15C11.4477 15 11 14.5523 11 14V6C11 5.44772 11.4477 5 12 5Z"
        />
      </svg>
    </span>
    <div
      class="c31x8kt soui-alert-content"
    >
      <div
        class="c-i9a6iv soui-alert-text"
      >
        This is danger text.
      </div>
    </div>
  </div>
</div>
`;
